# tcp-server

./: .gitignore  CMakeLists.txt  README.md  client.c  server.c
headers/: client_management.h  connection.h  game.h
src/: client.c  client_management.c  connection.c  game.c  server.c
